--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,36 @@
+/* Font awesome CDN */
+@import "https://use.fontawesome.com/releases/v5.15.4/css/all.css";
+/* Google fonts CDN */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 /*BOX SIZING - Method advised by Paul IRISH */
 
  html {
     box-sizing: border-box; /* Opera/IE 8+ */
     -moz-box-sizing: border-box; /* Firefox, autres Gecko */
     -webkit-box-sizing: border-box; /* Safari/Chrome, autres WebKit */
-    margin: 0;
+    margin: 0; padding: 0;
     font-family: 'Raleway', sans-serif;
+    font-size: 20px;
   }
   *, *:before, *:after {
+    margin: 0; padding: 0;
     box-sizing: inherit; /* Opera/IE 8+ */
     -moz-box-sizing: inherit; /* Firefox, autres Gecko */
     -webkit-box-sizing: inherit; /* Safari/Chrome, autres WebKit */ 
 }
 /*********************************************/
 
-/*
-Color settings to use
-bleu: #0065FC
-bleu clair : #DEEBFF
-gris : #F2F2F2  
-*/
-
 /*Debug*/
 *{
-  overflow: auto;
+  overflow: visible;
 }
 
 /* General settings */
 
 a{
-  text-decoration: inherit;
+  text-decoration: none;
 }
 
 a:visited{
@@ -42,114 +43,199 @@ a:hover{
 /* Main container */
 
 #container{
- width: 80%; 
- margin: 5px auto;
- min-width: 400px;
+ width: 95%; 
+ margin: 10px auto; 
+}
+
+/* Font sizes */
+h1{
+  font-size: 137%;
+}
+h2{
+  font-size: 115%;
 }
 
 /* Header */
 header{
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 }
 
 #logo-container{
-  display: flex;
-  align-items: center;
+  display: block;
 }
 
 img#logo{
-  margin-left: 20px;
-  height: 45px;
+  height: 5vh;
 }
 
 nav{
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: center;
 }
 
 header ul{
-  list-style: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
+  list-style: none;
 }
 
 header li{
-  margin: 0 20px;
-  padding-bottom: 2px;
-  padding-top: 30px;
+  text-align: center;
+  padding: 30px 25px 2px;
+}
+
+header li:nth-child(2){
+  padding: 30px 56px 2px;
+}
+
+header a{
+  color: inherit;
 }
 
 header li:hover{
   border-top: 1px solid #0065FC;
 }
 
+/* Section Accommodation */
+#accommodation-section span, #accommodation-section input[type="text"]{
+  font-size: 115%;
+  font-weight: bold;
+}
 
-/* Not a Destop */
-@media screen and (max-width:980px){
- 
+#accommodation-search-summary span{
+  font-size :100%;
+  font-weight: normal;
+}
+
+#accommodation-section #search-block{
+  width: 400px;
+  margin: 10px 0px;
+  position: relative;
+}
+
+#search-textbox{
+  width: 99%;
+  border: 1px #F2F2F2 solid;
+  border-radius: 6px;
+  margin: 8px 1px;
+  padding: 8px 132px 8px 55px;
+  transition: 0.2s;
+}
+
+#search-icon{
+  position: absolute;
+  left: 0;
+  top:9px;
+  padding: 12px 20px;
+  transition: 0.2s;
+  border-radius: 6px 0 0 6px;
+  background-color: #F2F2F2;
+}
+
+#search-submit{
+  position: absolute;
+  padding: 10px;
+  right: 0;
+  top: 9px;
+  border-radius: 0 6px 6px 0;
+  color: white;
+  background-color: #0065FC;
+  border: none;
+  outline: none;
+  transition: 0.2s;
+}
+
+#search-submit::after{
+  content: "Rechercher";
 }
 
 
-
-
-
-/* Mobile adaptation */
-@media screen and (max-width:768px) {
-  
-  /* Use the whole width of screen */
-  #container{
-    width: 100%;
-  }
-
-  header{
-    flex-direction: column;
-  }
-
-  img#logo{
-    height: 90px;
-    margin: auto;
-    padding-left: 70px; /* Original logo has 70px space at right.*/
-  }
-
-  nav{
-    justify-content: center;
-  }
-
-  header ul{
-    justify-content: center;
-    width: 100%;
-  }
-  header li {
-    text-align: center;
-    margin: 0;
-    padding-bottom: 20px;
-    font-size: 22px;
-    width: 50%;
-    border-bottom: 2px solid #F2F2F2 ;
-  }
-
-  header li:hover{
-    border-top: none;
-    border-bottom: 2px solid #0065FC;
-  }
-  
-  
-
-  main{
-    background-color: #F2F2F2;
-  }
-  
-
+#search-submit:hover{
+  border-color: #0065FC;
+  box-shadow: 0 0 10px 0 #0065FC;
+  font-weight: bold;
 }
 
-
-
-/* Main */
-
-main{
-  height: 500px
+#search-textbox:focus{
+  border-color: #0065FC;
+  box-shadow: 0 0 10px 0 #0065FC;
 }
 
-/* Footer */
+#search-textbox:focus + #search-icon{
+  background-color: #0065FC;
+  color: white;
+}
+
+#filter-buttons h2{
+  margin-right: 50px;
+  margin-top: 30px;
+}
+
+#filter-buttons{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.filter-button{
+  margin-top: 15px;
+  margin-right: 30px;
+  margin-bottom: 15px;
+  min-height: 60px;
+  position: relative;
+  border: 3px #F2F2F2 solid;
+  border-radius: 40px;
+  transition: 0.3s;
+}
+
+.filter-button:hover{
+  box-shadow: 0 0 10px 0 #0065FC;
+}
+
+.button-text{
+  font-weight: 700;
+  display: inline-block;
+  margin: 14px 15px 14px 70px;
+}
+
+.round-icon{
+  position: absolute;
+  left: 0;
+  margin-top: -2.5px;
+  margin-left: -5px;
+  padding-left: 17px;
+  padding-top: 18px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #0065FC;
+  background-color: #DEEBFF;
+}
+
+/* Centering adjustement of the fa-child icon */
+i.fa-child{
+  padding-left: 20px;
+  padding-top: 18px;
+}
+
+#accommodation-search-summary{
+  position: relative;
+}
+
+#accommodation-search-summary i{
+  width: 25px;
+  height: 25px;
+  padding-left: 9px;
+  padding-top: 4px;
+  border-radius: 50%;
+  color: #0065FC;
+  font-size: 70%;
+  border: 1px #F2F2F2 solid;
+}
+
+#accommodation-search-summary p{
+  position: absolute;
+  left: 33px;
+  top: 0px;
+}
