rename id: accommodation-section =>  search-section

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -39,7 +39,7 @@ header li:hover{
 }
 
 /* Section Accommodation */
-#accommodation-section #search-block{
+#search-section #search-block{
   width: 350px;
 }
 
