--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     margin: 0; padding: 0;
     box-sizing: inherit; /* Opera/IE 8+ */
     -moz-box-sizing: inherit; /* Firefox, autres Gecko */
-    -webkit-box-sizing: inherit; /* Safari/Chrome, autres WebKit */ 
+    -webkit-box-sizing: inherit; /* Safari/Chrome, autres WebKit */
 }
 /*********************************************/
 
@@ -98,7 +98,7 @@ header li:hover{
   border-top: 1px solid #0065FC;
 }
 
-/* Section Accommodation */
+/* Search section */
 #search-section span, #search-section input[type="text"]{
   font-size: 115%;
   font-weight: bold;
@@ -237,5 +237,78 @@ i.fa-child{
 #accommodation-search-summary p{
   position: absolute;
   left: 33px;
-  top: 0px;
+  top: 2px;
 }
+
+/* accommodations section */
+
+section{
+  margin: 1% 0%;
+}
+/*common settings */
+.blue{
+  color:#0065FC;
+}
+
+.gray{
+  color:#F2F2F2;
+}
+
+.fa-star{
+  font-size: 80%;
+}
+
+#accommodations-section{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding: 2%;
+  background-color: #F2F2F2;  
+}
+
+#accommodations-section h1{
+  width: 100%;
+  margin: 1% 0 0 3%;
+}
+
+.accommodation-card{
+  width: 28%;
+  margin: 2%;
+  padding: 0.8% 0.8%;
+  border-radius: 15px;
+  background-color: white;
+  box-shadow: 0px 5px 20px rgb(41, 31, 31);  
+}
+
+
+.accommodation-card-image{
+  position: relative;
+  overflow: hidden;
+  height: 200px;
+}
+
+.accommodation-card-image img{
+  border-radius: 15px 15px 0 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.accommodation-card-body{
+  padding: 2% 5%;
+}
+
+.accommodation-card h2{
+  font-size: 100%;
+}
+
+.accommodation-card p{
+  font-size: 87%;
+}
+
+
+
