--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,7 +3,7 @@ html{
 }
 
 /* Header */
-header{
+.main-header{
   flex-direction: column;
   align-items: center;
 }
@@ -21,19 +21,19 @@ nav{
  width: 100%;
 }
   
-header ul{
+.main-header ul{
   justify-content:flex-end;
   width: 100%;
 }
 
-header li {
+.main-header li {
   margin: 0;
   padding: 30px 20px 20px !important; /* override second nth-child(2)*/
   width: 50%;
   border-bottom: 2px solid #F2F2F2 ;
 }
   
-header li:hover{
+.main-header li:hover{
   border-top: none;
   border-bottom: 2px solid #0065FC;
 }
