--- a/css/normalize.css
+++ b/css/normalize.css
@@ -9,8 +9,8 @@
  */
 
 html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  /* line-height: 1.15; */ /* 1 */
+  /* -webkit-text-size-adjust: 100%; */ /* 2 */
 }
 
 /* Sections
@@ -39,7 +39,7 @@ main {
 
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
+  /* margin: 0.67em 0; */
 }
 
 /* Grouping content
