--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ a:hover{
 /* Main container */
 
 #container{
- /*width: 80%;*/ 
+ width: 95%; 
  margin: 10px auto; 
 }
 
@@ -110,9 +110,19 @@ nav{
 }
 
 /* Search section */
-#search-section span, #search-section input[type="text"]{
+#search-section span, #search-textbox{
   font-size: 115%;
   font-weight: bold;
+}
+#search-submit{
+  font-size: 115%;
+}
+
+.search__header{
+  margin: 15px 0;
+}
+.search__header > *{
+  margin: 5px 0;
 }
 
 #accommodation-search-summary span{
@@ -121,25 +131,32 @@ nav{
 }
 
 #search-section #search-block{
+  display: flex;
+  justify-items: flex-start;
+  align-items: stretch;
+  margin: 10px 0;
   width: 400px;
-  margin: 10px 0px;
+  height: 50px;
   position: relative;
 }
 
 #search-textbox{
-  width: 99%;
+  width: 100%;
   border: 1px #F2F2F2 solid;
+  height: 100%;
   border-radius: 6px;
-  margin: 8px 1px;
-  padding: 8px 132px 8px 55px;
+  padding: 0 125px 0 52px;
   transition: 0.2s;
 }
 
 #search-icon{
   position: absolute;
+  height: 100%;
+  width: 50px;
   left: 0;
-  top:9px;
-  padding: 12px 20px;
+  top: 0;
+  padding: 14px 18px;
+  font-size: 120%;
   transition: 0.2s;
   border-radius: 6px 0 0 6px;
   background-color: #F2F2F2;
@@ -149,7 +166,8 @@ nav{
   position: absolute;
   padding: 10px;
   right: 0;
-  top: 9px;
+  top: 0px; 
+  height: 100%;
   border-radius: 0 6px 6px 0;
   color: white;
   background-color: #0065FC;
@@ -190,6 +208,7 @@ nav{
 }
 
 .filter-button{
+  display: flex;
   margin-top: 15px;
   margin-right: 30px;
   margin-bottom: 15px;
