--- a/css/style.css
+++ b/css/style.css
@@ -110,12 +110,18 @@ nav{
 }
 
 /* Search section */
+
 #search-section span, #search-textbox{
   font-size: 115%;
   font-weight: bold;
 }
+
 #search-submit{
   font-size: 115%;
+}
+
+#search-section{
+  margin: 10px 0;
 }
 
 .search__header{
@@ -198,7 +204,7 @@ nav{
 }
 
 #filter-buttons h2{
-  margin-right: 50px;
+  margin-right: 25px;
   margin-top: 30px;
 }
 
@@ -209,11 +215,11 @@ nav{
 
 .filter-button{
   display: flex;
-  margin-top: 15px;
-  margin-right: 30px;
-  margin-bottom: 15px;
-  min-height: 60px;
-  position: relative;
+  margin: 15px 20px 15px 0;
+  overflow: visible;
+  justify-content: flex-start;
+  height: 56px;
+  /*min-height: 50px;*/
   border: 3px #F2F2F2 solid;
   border-radius: 40px;
   transition: 0.3s;
@@ -226,18 +232,17 @@ nav{
 .button-text{
   font-weight: 700;
   display: inline-block;
-  margin: 14px 15px 14px 70px;
+  margin: 14px;
 }
 
 .round-icon{
-  position: absolute;
-  left: 0;
-  margin-top: -2.5px;
-  margin-left: -5px;
+  display: block;
+  margin: -3px 0 0-3px;
   padding-left: 17px;
   padding-top: 18px;
-  width: 60px;
-  height: 60px;
+  width: 56px;
+  height: 56px;
+  font-size: 130%;
   border-radius: 50%;
   color: #0065FC;
   background-color: #DEEBFF;
@@ -245,8 +250,9 @@ nav{
 
 /* Centering adjustement of the fa-child icon */
 i.fa-child{
-  padding-left: 20px;
+  padding-left: 18px;
   padding-top: 18px;
+  font-size: 160%;
 }
 
 #accommodation-search-summary{
@@ -318,6 +324,11 @@ i.fa-child{
   border-radius: 15px;
   background-color: white;
   box-shadow: 0px 5px 20px rgb(41, 31, 31);  
+}
+
+.accommodation__article:hover{
+  border-color: #0065FC;
+  box-shadow: 0 0 10px 0 #0065FC;
 }
 
 .accommodation-card__imageblock{
@@ -398,6 +409,10 @@ i.fa-child{
 .most-populars__article a{
   display: flex;
   height: 100%;
+}
+.most-populars__article:hover{
+  border-color: #0065FC;
+  box-shadow: 0 0 10px 0 #0065FC;
 }
 
 .most-populars-card__imageblock{
