large mobile intial version

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,13 +1,10 @@
-html{
-  font-size: 18px;
-}
-
 /* Header */
 .main-header{
   flex-direction: column;
   align-items: center;
   height: 30vh;
 }
+
   
 #logo-container{
   margin: auto;
@@ -39,21 +36,6 @@ nav{
   border-bottom: 2px solid #0065FC;
 }
 
-/* Section Accommodation */
-
-#search-section{
-  height: 70vh;
-}
-
-#search-section #search-block{
-  width: 80%;
-  margin: auto;
-}
-#search-section form{
-  height: 100%;
-  border: 1px red solid;
-}
-
 #search-textbox{
   padding: 0 65px 0 52px;  
 }
@@ -78,28 +60,9 @@ nav{
   margin: 10px 10px 10px 0;
 }
 
-/* Accommodations container */
-#accommodations-container{
-  flex-direction: column-reverse;
-}
 
-.accommodations__section{
+
+
+.accommodation__article{
   width: 100%;
-  background-color: inherit;
-  border-radius: inherit;
 }
-
-/* most-populars */
-.most-populars__aside{
-  width: 100%;
-  padding: 15px 20px;
-  border-radius: inherit;
-}
-
-
-
-
-
-
-
-
