correction of css errors and link color problem

--- a/css/large_mobile.css
+++ b/css/large_mobile.css
@@ -67,7 +67,7 @@ i.fa-money-bill-wave{
  
 .most-populars__article{
     height: 220px;
-    margin: 0,auto,10px;
+    margin: 0 auto 15px;
 }
 
 .most-populars-card__bodyblock{
